# readalyse-frontend/src/app/data-access/api/model/models.ts
@@ -7,6 +7,7 @@ export * from './book';
 export * from './bookList';
 export * from './bookshelf';
 export * from './bookshelfList';
+export * from './isFavorite';
 export * from './language';
 export * from './languageList';
 export * from './pagination';
@@ -22,4 +23,5 @@ export * from './roleEnum';
 export * from './statusEnum';
 export * from './subject';
 export * from './subjectList';
+export * from './text';
 export * from './user';
